[project]
name = "cnki-mcp"
version = "0.1.0"
description = "MCP server for CNKI professional search via browser automation"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cnki-mcp = "cnki_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]
